TreeAnalysis/Plot/Temp5/SR_bkg.txt
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_SR/WWWJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_SR/TTWJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_SR/TTGJets.root therefore preventing schema evolution when reading this file.
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_SR/DYJetsToLLTuneZ2M10.root does not exist
Info in <TCanvas::Print>: file Stack_SR_bkg.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_SR_bkg.root has been created

######### MonteCarlo samples #########

WWZJets .......................... 0.302447076057
TTZJets .......................... 1.58860274195
TTWWJets .......................... 0.0043484694387
WWWJets  has no entries or is a zombie
WZ .......................... 0.595393285155
TTTo2L2Nu2B .......................... 0.128173585981
TTWJets  has no entries or is a zombie
TTGJets  has no entries or is a zombie
DYJetsToLLTuneZ2M50 .......................... 2.0440299511
DYJetsToLLTuneZ2M10  has no entries or is a zombie
digit anything you want to end the script 
Traceback (most recent call last):
  File "./scriptStack.py", line 46, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
